--- a/css/style.css
+++ b/css/style.css
@@ -358,3 +358,20 @@ a.text-naranja:hover {
         font-size: .7rem;
     } */
 }
+
+.iframe-container {
+	position: relative;
+	padding-bottom: 56.25%;
+	height: 0;
+	overflow: hidden;
+}
+
+.iframe-container>iframe,
+.iframe-container>img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border: none;
+}
